<resources>
    <string name="app_name">Konovodov_HW_5.1.2_ExternalStorage</string>
    <string name="result">=</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="plusMinus">+/-</string>
    <string name="plus">+</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="minus">-</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="mult">X</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="div">/</string>
    <string name="del">del</string>
    <string name="percent">%</string>
    <string name="clear">C</string>
    <string name="toCount">посчитаем?</string>
    <string name="save">save</string>
</resources>
